success message visibility fix

--- a/code/style.css
+++ b/code/style.css
@@ -560,7 +560,6 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  display: none;
   visibility: hidden;
   z-index: 5;
 }
